# candid-satcam

./: .gitignore  README.md  fetch_cloudcover.py  geocode.py  get_landsat_date.py  get_wrs_path.py  is_visible.py  main.py  pyproject.toml
temp_weather/gfs/20251230/: gfs.t00z.pgrb2.0p25.f000.idx
temp_weather/gfs/20260101/: gfs.t00z.pgrb2.0p25.f000.idx
temp_weather/gfs/20260102/: gfs.t00z.pgrb2.0p25.f000.idx
